# ilearncppandiambadatit

./: CMakeLists.txt
assets/shader/: tri.vert
src/: app.cc  app.hh  buffer.hh  consts.hh  error.hh  glbuffer.hh  main.cc  shader.cc  shader.hh  texure.hh  vao.hh
